[package]
name = "simple_asn1"
version = "0.5.0"
authors = ["Adam Wick <awick@uhsure.com>"]
description = "A simple DER/ASN.1 encoding/decoding library."
categories = ["encoding"]
keywords = ["ASN1","encoding","DER"]
license = "ISC"
repository = "https://github.com/acw/simple_asn1"
edition = "2018"

[dependencies]
chrono     = { default-features = false, features = ["alloc"], version = "0.4" }
num-bigint = { default-features = false, version = "0.3" }
num-traits = { default-features = false, version = "0.2" }

[dev-dependencies]
quickcheck = "0.9"
rand = "0.7"
